...
    static let congrats = getTranslation(for: "Congrats! Where did you apply?")
    static let contactSupport = getTranslation(for: "Contact Support")
    static let criteria = getTranslation(for: "Criteria")
    static let date = getTranslation(for: "Date")
    static let declined = getTranslation(for: "Declined")
    static let descending = getTranslation(for: "Descending")
    static let details = getTranslation(for: "Details")
    static let enterJobNameHere = getTranslation(for: "Enter job name here.")
    static let feedback = getTranslation(for: "Feedback")
    static let filterByDate = getTranslation(for: "Filter by Date")
    static let filterByStatus = getTranslation(for: "Filter by Status")
    static let filters = getTranslation(for: "Filters")
    static let ghosted = getTranslation(for: "Ghosted")
...
